# shopping_assistant

./: config.ini  pyproject.toml
app/: config.py  main.py
app/agent/: web_search_agent.py
app/prompts/: agent_prompt.py
app/routers/: shopping_assistant.py
app/schemas/: user_input.py
app/tools/: agent_tools.py  azure_bing_search.py
